fix tab spacing and line height pre tag

--- a/css/common.css
+++ b/css/common.css
@@ -4,6 +4,13 @@ html{
   
 }
 
+pre {
+    -moz-tab-size:    2; /* Firefox 4+ */
+    -o-tab-size:      2; /* Opera 11.5 & 12.1 only */
+    tab-size:         2; /* Chrome 21+, Safari 6.1+, Opera 15+ */
+    line-height: normal;
+}
+
 nav{
   padding-left:3%;
   list-style-type: none;
